--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: url('/img/fundocinza.avif') no-repeat center center fixed;
+    background: url('../img/fundocinza.avif') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
