--- a/css/durenchente.css
+++ b/css/durenchente.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-image: url('/img/fundocinza.avif');
+    background-image: url('../img/fundocinza.avif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
