--- a/css/pos.css
+++ b/css/pos.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-image: url('/img/fundocinza.avif'); /* Substitua com o caminho da sua imagem */
+    background-image: url('../img/fundocinza.avif'); /* Substitua com o caminho da sua imagem */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
